WebCore/WebCore.gyp/WebCore.gyp
@@ -180,6 +180,9 @@
           '../platform/mac',
           '../platform/text/mac',
         ],
+        # enable -Wall and -Werror, just in Mac build for now
+        # FIXME: Also enable this for Linux/Windows after verifying no warnings
+        'chromium_code': 1,
       }],
       ['OS=="win"', {
         'webcore_include_dirs': [
